--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,53 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+.queueButton {
+    font-size: 10px;
+    background-color: #cf7e04; /* orange */
+    border: none;
+    color: white;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+
+}
+
+.listOfSongs {
+    max-width: 100%;
+    display: block;
+    /*margin-bottom: 10%;*/
+}
+
+.listOfSongs td, th {
+border-bottom: 1px solid #ddd;
+padding: 8px;
+}
+
+.listOfSongs tr:nth-child(even) {
+background-color: rgb(24, 22, 22);
+}
+
+.listOfSongs tr:nth-child(odd) {
+    background-color: rgb(61, 54, 54);
+    }
+
+.listOfSongs p {
+margin: 0px;
+font-size: 15px;
+color: white;
+}
+
+.listOfSongs table {
+    width: 100%;
+}
+
+.spotifyControllerHeader {
+    justify-content: space-between;
+}
+
+
+.wideCell {
+    width: 85%;
+}
