--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -51,3 +51,21 @@ color: white;
 .wideCell {
     width: 85%;
 }
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    width: 50%;
+    height: 50%;
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
