--- a/public/css/app.css
+++ b/public/css/app.css
@@ -801,6 +801,9 @@ select {
 .justify-between {
   justify-content: space-between;
 }
+.justify-evenly {
+  justify-content: space-evenly;
+}
 .justify-items-center {
   justify-items: center;
 }
@@ -1171,7 +1174,8 @@ color: white;
     width: 100%;
 }
 .spotifyControllerHeader {
-    justify-content: space-between;
+    display: flex;
+    justify-content: space-evenly;
 }
 .wideCell {
     width: 85%;
