--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -44,7 +44,8 @@ color: white;
 }
 
 .spotifyControllerHeader {
-    justify-content: space-between;
+    display: flex;
+    justify-content: space-evenly;
 }
 
 
