--- a/public/css/app.css
+++ b/public/css/app.css
@@ -710,6 +710,9 @@ select {
 .h-8 {
   height: 2rem;
 }
+.max-h-16 {
+  max-height: 4rem;
+}
 .min-h-screen {
   min-height: 100vh;
 }
@@ -801,9 +804,6 @@ select {
 .justify-between {
   justify-content: space-between;
 }
-.justify-evenly {
-  justify-content: space-evenly;
-}
 .justify-items-center {
   justify-items: center;
 }
@@ -819,6 +819,11 @@ select {
 }
 .overflow-hidden {
   overflow: hidden;
+}
+.truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 .rounded-md {
   border-radius: 0.375rem;
@@ -1196,6 +1201,72 @@ color: white;
     border: 1px solid #888;
     width: 80%;
 }
+.footer {
+    position: fixed;
+    z-index: 1;
+    bottom: 0;
+    display: flex;
+    width: 100%;
+    height: 13%;
+    flex-direction: column;
+    
+}
+.currentlyPlaying {
+    background-color: grey;
+    height: 65%;
+    width: 100%;
+
+}
+.songInfo {
+    height: 97%; 
+    display: flex;
+    align-items: stretch;
+    max-width: 100vh;
+}
+.smallAlbumArt {
+    max-width: 15%;
+  }
+.smallAlbumArt img {
+        max-width: 100%;
+        max-height: 100%;
+        
+        padding: 25%;
+        
+    }
+.songName {
+        flex-grow: 3;
+        width: 60%;
+        text-align: center;
+
+    }
+.progressBarOutline {
+    background-color: #cc9a50;
+    border-radius: 2px;
+    width: 100%;
+}
+.progressBar {
+        height: 7px;
+        width: 15%;
+        background-color: #cf7e04;
+    }
+.spotifyNavBar{
+        background-color: white;
+        height: 35%;
+        bottom: 0;
+        align-self: flex-end;
+        width: 100%;
+    }
+.footerSpacer {
+        height: 13vh;
+    }
+.playlistTitle {
+        position: -webkit-sticky;
+        position: sticky;
+        top: 0;
+        background-color: #cf7e04;
+        text-align: center;
+        font-size: medium;
+      }
 .hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
