--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -70,3 +70,80 @@ color: white;
     border: 1px solid #888;
     width: 80%;
 }
+
+.footer {
+    position: fixed;
+    z-index: 1;
+    bottom: 0;
+    display: flex;
+    width: 100%;
+    height: 13%;
+    flex-direction: column;
+    
+}
+
+.currentlyPlaying {
+    background-color: grey;
+    height: 65%;
+    width: 100%;
+
+}
+
+.songInfo {
+    height: 97%; 
+    display: flex;
+    align-items: stretch;
+    max-width: 100vh;
+}
+
+.smallAlbumArt {
+    max-width: 15%;
+  }
+
+    .smallAlbumArt img {
+        max-width: 100%;
+        max-height: 100%;
+        
+        padding: 25%;
+        
+    }
+
+    .songName {
+        flex-grow: 3;
+        width: 60%;
+        text-align: center;
+
+    }
+
+.progressBarOutline {
+    background-color: #cc9a50;
+    border-radius: 2px;
+    width: 100%;
+}
+
+    .progressBar {
+        height: 7px;
+        width: 15%;
+        background-color: #cf7e04;
+    }
+
+
+    .spotifyNavBar{
+        background-color: white;
+        height: 35%;
+        bottom: 0;
+        align-self: flex-end;
+        width: 100%;
+    }
+
+    .footerSpacer {
+        height: 13vh;
+    }
+
+    .playlistTitle {
+        position: sticky;
+        top: 0;
+        background-color: #cf7e04;
+        text-align: center;
+        font-size: medium;
+      }
