--- a/public/css/app.css
+++ b/public/css/app.css
@@ -656,6 +656,10 @@ select {
   margin-left: auto;
   margin-right: auto;
 }
+.mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+}
 .ml-3 {
   margin-left: 0.75rem;
 }
@@ -755,6 +759,9 @@ select {
 .h-8 {
   height: 2rem;
 }
+.max-h-\[300px\] {
+  max-height: 300px;
+}
 .max-h-16 {
   max-height: 4rem;
 }
@@ -773,6 +780,12 @@ select {
 .w-6 {
   width: 1.5rem;
 }
+.w-1\/5 {
+  width: 20%;
+}
+.w-1\/4 {
+  width: 25%;
+}
 .w-20 {
   width: 5rem;
 }
@@ -782,8 +795,14 @@ select {
 .w-48 {
   width: 12rem;
 }
+.w-32 {
+  width: 8rem;
+}
 .w-8 {
   width: 2rem;
+}
+.w-10 {
+  width: 2.5rem;
 }
 .max-w-7xl {
   max-width: 80rem;
@@ -941,6 +960,10 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
 .bg-indigo-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(238 242 255 / var(--tw-bg-opacity));
@@ -953,9 +976,13 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
-.bg-black {
+.bg-orange-600 {
   --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  background-color: rgb(234 88 12 / var(--tw-bg-opacity));
+}
+.bg-slate-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
 }
 .fill-current {
   fill: currentColor;
@@ -1014,6 +1041,9 @@ select {
 .pb-1 {
   padding-bottom: 0.25rem;
 }
+.pl-4 {
+  padding-left: 1rem;
+}
 .pl-3 {
   padding-left: 0.75rem;
 }
@@ -1050,6 +1080,10 @@ select {
   font-size: 1rem;
   line-height: 1.5rem;
 }
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -1057,10 +1091,6 @@ select {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
 }
 .text-4xl {
   font-size: 2.25rem;
@@ -1122,6 +1152,10 @@ select {
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
 }
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
 .text-indigo-700 {
   --tw-text-opacity: 1;
   color: rgb(67 56 202 / var(--tw-text-opacity));
@@ -1133,10 +1167,6 @@ select {
 .text-indigo-600 {
   --tw-text-opacity: 1;
   color: rgb(79 70 229 / var(--tw-text-opacity));
-}
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 .text-gray-200 {
   --tw-text-opacity: 1;
@@ -1184,6 +1214,9 @@ select {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+.ring-inset {
+  --tw-ring-inset: inset;
 }
 .ring-gray-300 {
   --tw-ring-opacity: 1;
@@ -1237,15 +1270,12 @@ select {
     /*margin-bottom: 10%;*/
 }
 .listOfSongs td, th {
-border-bottom: 1px solid #ddd;
 padding: 8px;
 }
-.listOfSongs tr:nth-child(even) {
-background-color: rgb(24, 22, 22);
+.listOfSongs tr {
+background-color: #191414;
 }
-.listOfSongs tr:nth-child(odd) {
-    background-color: rgb(61, 54, 54);
-    }
+
 .listOfSongs p {
 margin: 0px;
 font-size: 15px;
@@ -1257,6 +1287,8 @@ color: white;
 .spotifyControllerHeader {
     display: flex;
     justify-content: space-evenly;
+    color: #ffffff;
+
 }
 .wideCell {
     width: 85%;
@@ -1264,18 +1296,31 @@ color: white;
 .modal {
     display: none;
     position: fixed;
+    margin: auto;
+    margin-bottom: 5px;
+    left: 0;
+    right: 0;
+    bottom: 13%;
     z-index: 1;
-    width: 50%;
-    height: 50%;
+    width: 95%;
+    height: 7%;
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    border-radius: 25px;
+    
 }
 .modal-content {
     background-color: #fefefe;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
+    /* margin: 5% auto; */
+    padding: 5px;
+    margin: auto;
+    width: 95%;
+    height: 100%;
+    border: 7px solid rgb(65, 62, 62);
+    border-radius: 25px;
+    line-height: 100%;
+    
+
 }
 .footer {
     position: fixed;
@@ -1285,19 +1330,23 @@ color: white;
     width: 100%;
     height: 13%;
     flex-direction: column;
+        
     
 }
 .currentlyPlaying {
-    background-color: grey;
+    background-color: #191414;
     height: 65%;
     width: 100%;
+    border-radius: 25px 25px 0px 0px;
+    border-top: 5px solid #6b7280;
 
 }
 .songInfo {
-    height: 97%; 
+    height: 92%; 
     display: flex;
     align-items: stretch;
     max-width: 100vh;
+    
 }
 .smallAlbumArt {
     max-width: 15%;
@@ -1313,7 +1362,9 @@ color: white;
         flex-grow: 3;
         width: 60%;
         text-align: center;
-
+        color: #ffffff;
+        margin-top: auto;
+        margin-bottom: auto;
     }
 .progressBarOutline {
     background-color: #cc9a50;
@@ -1323,14 +1374,15 @@ color: white;
 .progressBar {
         height: 7px;
         width: 15%;
-        background-color: #cf7e04;
+        background-color: #ad6b08;
     }
 .spotifyNavBar{
-        background-color: white;
+        background-color: #191414;
         height: 35%;
         bottom: 0;
         align-self: flex-end;
         width: 100%;
+        margin-top: auto;
     }
 .footerSpacer {
         height: 13vh;
@@ -1342,6 +1394,8 @@ color: white;
         background-color: #cf7e04;
         text-align: center;
         font-size: medium;
+        z-index: 51;
+        height: 30px;
       }
 .hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
