--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -21,17 +21,12 @@
 }
 
 .listOfSongs td, th {
-border-bottom: 1px solid #ddd;
 padding: 8px;
 }
 
-.listOfSongs tr:nth-child(even) {
-background-color: rgb(24, 22, 22);
+.listOfSongs tr {
+    background-color: #191414;
 }
-
-.listOfSongs tr:nth-child(odd) {
-    background-color: rgb(61, 54, 54);
-    }
 
 .listOfSongs p {
 margin: 0px;
@@ -46,6 +41,8 @@ color: white;
 .spotifyControllerHeader {
     display: flex;
     justify-content: space-evenly;
+    color: #ffffff;
+
 }
 
 
@@ -56,19 +53,32 @@ color: white;
 .modal {
     display: none;
     position: fixed;
+    margin: auto;
+    margin-bottom: 5px;
+    left: 0;
+    right: 0;
+    bottom: 13%;
     z-index: 1;
-    width: 50%;
-    height: 50%;
+    width: 95%;
+    height: 7%;
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    border-radius: 25px;
+    
 }
 
 .modal-content {
     background-color: #fefefe;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
+    /* margin: 5% auto; */
+    padding: 5px;
+    margin: auto;
+    width: 95%;
+    height: 100%;
+    border: 7px solid rgb(65, 62, 62);
+    border-radius: 25px;
+    line-height: 100%;
+    
+
 }
 
 .footer {
@@ -86,6 +96,8 @@ color: white;
     background-color: grey;
     height: 65%;
     width: 100%;
+    border-radius: 25px 25px 0px 0px;
+    border-top: 5px solid #6b7280;
 
 }
 
@@ -112,7 +124,9 @@ color: white;
         flex-grow: 3;
         width: 60%;
         text-align: center;
-
+        color: #ffffff;
+        margin-top: auto;
+        margin-bottom: auto;
     }
 
 .progressBarOutline {
@@ -134,6 +148,7 @@ color: white;
         bottom: 0;
         align-self: flex-end;
         width: 100%;
+        margin-top: auto;
     }
 
     .footerSpacer {
@@ -146,4 +161,6 @@ color: white;
         background-color: #cf7e04;
         text-align: center;
         font-size: medium;
+        z-index: 51;
+
       }
