--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1301,10 +1301,10 @@ color: white;
     margin-bottom: 5px;
     left: 0;
     right: 0;
-    bottom: 17%;
+    bottom: 21%;
     z-index: 1;
     width: 95%;
-    height: 7%;
+    height: 50px;
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
     border-radius: 25px;
@@ -1322,6 +1322,35 @@ color: white;
     line-height: 100%;
     
 
+}
+
+.largeModal {
+  display: none;
+  position: fixed;
+  margin: auto;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 3;
+  width: 100%;
+  height: 99vh;
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  border-radius: 25px;
+  color:white;
+}
+
+.largeModal-content {
+  background-color: #191414;
+  /* margin: 5% auto; */
+  padding: 5px;
+  margin: auto;
+  width: 100%;
+  height: 100%;
+  border: 7px solid rgb(65, 62, 62);
+  border-radius: 25px;
+  line-height: 100%;
+  z-index: 4;
 }
 .footer {
     position: fixed;
@@ -1351,12 +1380,15 @@ color: white;
 }
 .smallAlbumArt {
     max-width: 15%;
+    margin-top: auto;
+    margin-bottom: auto;
   }
 .smallAlbumArt img {
         max-width: 100%;
         max-height: 100%;
         
         padding: 25%;
+        
         
     }
 .songName {
@@ -1395,9 +1427,16 @@ color: white;
         background-color: #cf7e04;
         text-align: center;
         font-size: medium;
-        z-index: 51;
+        z-index: 2;
         height: 30px;
       }
+.scrollingText {
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
+}
+.scrollingText::-webkit-scrollbar {
+  display: none;
+}
 .hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
