--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -12,16 +12,17 @@
     cursor: pointer;
 
 }
-
 .listOfSongs {
     max-width: 100%;
     display: block;
     /*margin-bottom: 10%;*/
 }
-
+.listOfSongs td, th {
+/* padding: 3px 8px 3px 5px;*/
+}
 .listOfSongs tr {
-    background-color: #191414;
-    height: 75px;
+background-color: #191414;
+height: 75px;
 }
 
 .listOfSongs p {
@@ -29,23 +30,18 @@ margin: 0px;
 font-size: 15px;
 color: white;
 }
-
 .listOfSongs table {
     width: 100%;
 }
-
 .spotifyControllerHeader {
     display: flex;
     justify-content: space-evenly;
     color: #ffffff;
 
 }
-
-
 .wideCell {
-    width: 85%;
+    width: 80%;
 }
-
 .modal {
     display: none;
     position: fixed;
@@ -62,7 +58,6 @@ color: white;
     border-radius: 25px;
     
 }
-
 .modal-content {
     background-color: #fefefe;
     /* margin: 5% auto; */
@@ -78,34 +73,33 @@ color: white;
 }
 
 .largeModal {
-    display: none;
-    position: fixed;
-    margin: auto;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 3;
-    width: 100%;
-    height: 99vh;
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-    border-radius: 25px;
-    color:white;
+  display: none;
+  position: fixed;
+  margin: auto;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 3;
+  width: 100%;
+  height: 99vh;
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  border-radius: 25px;
+  color:white;
 }
 
 .largeModal-content {
-    background-color: #191414;
-    /* margin: 5% auto; */
-    padding: 5px;
-    margin: auto;
-    width: 100%;
-    height: 100%;
-    border: 7px solid rgb(65, 62, 62);
-    border-radius: 25px;
-    line-height: 100%;
-    z-index: 4;
+  background-color: #191414;
+  /* margin: 5% auto; */
+  padding: 5px;
+  margin: auto;
+  width: 100%;
+  height: 100%;
+  border: 7px solid rgb(65, 62, 62);
+  border-radius: 25px;
+  line-height: 100%;
+  z-index: 4;
 }
-
 .footer {
     position: fixed;
     z-index: 1;
@@ -114,82 +108,81 @@ color: white;
     width: 100%;
     height: 20%;
     flex-direction: column;
+        
     
 }
-
 .currentlyPlaying {
-    background-color: grey;
+    background-color: #191414;
     height: 65%;
     width: 100%;
     border-radius: 25px 25px 0px 0px;
     border-top: 5px solid #6b7280;
 
 }
-
 .songInfo {
     height: 92%; 
     display: flex;
     align-items: stretch;
     max-width: 100vh;
+    
 }
-
 .smallAlbumArt {
     max-width: 15%;
     margin-top: auto;
     margin-bottom: auto;
-  }
-
+}
 .smallAlbumArt img {
-    max-width: 100%;
-    max-height: 100%;
-    
-    padding: 25%;
-    
+        max-width: 100%;
+        max-height: 100%;
+        
+        padding: 25%;
+        
+        
 }
-
 .songName {
-    flex-grow: 3;
-    width: 60%;
-    text-align: center;
-    color: #ffffff;
-    margin-top: auto;
-    margin-bottom: auto;
+        flex-grow: 3;
+        width: 60%;
+        text-align: center;
+        color: #ffffff;
+        margin-top: auto;
+        margin-bottom: auto;
 }
-
 .progressBarOutline {
     background-color: #cc9a50;
     border-radius: 2px;
     width: 100%;
 }
-
 .progressBar {
-    height: 7px;
-    width: 15%;
-    background-color: #cf7e04;
+        height: 7px;
+        width: 15%;
+        background-color: #ad6b08;
 }
-
-
 .spotifyNavBar{
-    background-color: #191414;
-    height: 50%;
-    bottom: 0;
-    align-self: flex-end;
-    width: 100%;
-    margin-top: auto;
+        background-color: #191414;
+        height: 50%;
+        bottom: 0;
+        align-self: flex-end;
+        width: 100%;
+        margin-top: auto;
 }
-
 .footerSpacer {
-    height: 13vh;
+        height: 20vh;
+}
+.playlistTitle {
+        position: -webkit-sticky;
+        position: sticky;
+        top: 0;
+        background-color: #cf7e04;
+        text-align: center;
+        font-size: medium;
+        z-index: 1;
+        height: 30px;
 }
 
-.playlistTitle {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-    background-color: #cf7e04;
-    text-align: center;
-    font-size: medium;
-    z-index: 2;
-    height: 30px;
-
+.scrollingText {
+-ms-overflow-style: none;  /* Internet Explorer 10+ */
+scrollbar-width: none;  /* Firefox */
+}
+.scrollingText::-webkit-scrollbar {
+display: none;
 }
